# hyperlquid-cli

./: Cargo.toml  LICENSE  README.md
src/: asset_index.rs  config.rs  db.rs  hl_api.rs  lib.rs  order_config.rs  output.rs  paths.rs  prompt.rs  test_support.rs  validation.rs  watch.rs  ws.rs
src/server/: client.rs  types.rs
